--- a/readme
+++ b/readme
@@ -1,66 +1,81 @@
-############## Guide d'installation et d'exécution ##########################
+# Rapizz Pizzeria 🍕
 
-# Prérequis
+## Guide d'installation et d'exécution
 
-Java JDK 17 ou version plus récente installé (https://adoptopenjdk.net/)
+---
 
-Serveur MySQL installé et en cours d’exécution (https://dev.mysql.com/downloads/mysql/)
+### 🚦 Prérequis
 
-(Optionnel) Git si vous souhaitez cloner le dépôt
+- **Java JDK 17** ou version plus récente  
+  [Télécharger ici](https://adoptopenjdk.net/)
+- **Serveur MySQL** installé et en cours d’exécution  
+  [Télécharger ici](https://dev.mysql.com/downloads/mysql/)
+- (Optionnel) **Git** pour cloner le dépôt  
+  [Télécharger ici](https://git-scm.com/downloads)
 
-Cloner ou Télécharger le Projet
+---
+
+### 📥 Cloner ou Télécharger le Projet
 
 ```bash
 git clone <repo-url>
 cd Rapizz_Pizzeria
-
 ```
-# Configurer MySQL
 
-Assurez-vous que MySQL est en cours d’exécution.
+---
 
-Par défaut, l’application s’attend à :
+### ⚙️ Configurer MySQL
 
-Hôte : 127.0.0.1
+- Assurez-vous que MySQL est en cours d’exécution.
+- **Paramètres par défaut** :
+  - **Hôte** : `127.0.0.1`
+  - **Port** : `3306`
+  - **Utilisateur** : `root`
+  - **Mot de passe** : `316MIQq~+X`
+- Vous pouvez modifier ces informations dans  
+  `src/utils/DatabaseInitializer.java` si nécessaire.
 
-Port : 3306
+---
 
-Utilisateur : root
+### 🔗 Télécharger le Driver JDBC MySQL
 
-Mot de passe : 316MIQq~+X
+- Le driver requis (`mysql-connector-java-9.3.0.jar`) est déjà présent dans le dossier `lib/`.
+- S'il manque, [téléchargez-le ici](https://dev.mysql.com/downloads/connector/j/).
 
-Vous pouvez modifier ces informations dans src/utils/DatabaseInitializer.java si nécessaire.
+---
 
-Télécharger le Driver JDBC MySQL
-
-Le driver requis (mysql-connector-java-9.3.0.jar) est déjà présent dans le dossier lib/.
-
-S'il manque, téléchargez-le depuis : https://dev.mysql.com/downloads/connector/j/
-
-# Compiler le Projet
+### 🛠️ Compiler le Projet
 
 ```bash
 javac -cp .:lib/mysql-connector-java-9.3.0.jar -d build $(find src -name "*.java") && cp -r src/images build/
 ```
 
-# Exécuter le Programme
+---
+
+### ▶️ Exécuter le Programme
 
 ```bash
 java -cp lib/mysql-connector-java-9.3.0.jar:build main.Main
 ```
 
-# Initialisation de la Base de Données
+---
 
-Au premier lancement, le programme créera automatiquement la base de données et les tables, et insérera les données initiales.
+### 🗄️ Initialisation de la Base de Données
 
-Si vous souhaitez réinitialiser la base de données, supprimez la base rapizz_pizzeria dans MySQL et relancez le programme.
+- Au premier lancement, le programme créera automatiquement la base de données, les tables, et insérera les données initiales.
+- Pour réinitialiser la base de données :  
+  Supprimez la base `rapizz_pizzeria` dans MySQL et relancez le programme.
 
-############## Anciennes Commandes ##########################
+---
+
+<details>
+<summary>🕰️ Anciennes Commandes</summary>
 
 ```bash
 javac -d build $(find src -name "*.java") && cp -r src/images build/
 java -cp build main.Main
 ```
+</details>
 
 
 
